--- a/public/css/common.css
+++ b/public/css/common.css
@@ -866,7 +866,7 @@ body {
 }
 
 .header {
-  background:#f5f5f5;
+  background:#5AAE08;
   border-bottom:1px solid #e5e5e5;
   overflow:hidden;
 }
@@ -887,6 +887,12 @@ body {
   font-size:19px;
   padding:14px 0 12px 0;
 }
+.title a {
+  color:white;
+}
+.title a:hover {
+  color:white;
+}
 
 .header-search {
   float:left;
@@ -896,9 +902,7 @@ body {
 
 .header-search input {
   padding:4px 5px;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
-  border: 1px solid #ccc;
-  border-radius: 3px;
+  border:1px solid white;
 }
 
 .header-rigth-container {
@@ -915,6 +919,13 @@ body {
 .header-login-container {
   float:left;
   padding-top:13px;
+}
+
+.header-login-container a {
+  color:white;
+}
+.header-login-container a:hover {
+  color:white;
 }
 
 /* Markdown */
