improve border color

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -10,11 +10,11 @@
  
 /*
   Default values
-    border:1px solid #d8d8d8;
+    border:1px solid #e6e6e6;
     border-radius: 3px;
   
   input[type=text] 
-    border:1px solid #d8d8d8;
+    border:1px solid #e6e6e6;
     border-radius: 3px;
     padding:6px 5px;
     margin:5px 0;
@@ -243,7 +243,7 @@ ul.issues-label-pallet li {
   width:50%;
 }
 .issues-labels {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius:3px;
   display:inline-block;
 }
@@ -262,12 +262,12 @@ ul.issues-label-pallet li {
 }
 
 .issues-header {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   background:#fafafa;
   padding:10px;
 }
 .issues-body {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-top:none;
   background:#fafafa;
   background:white;
@@ -291,7 +291,7 @@ ul.issues-label-pallet li {
 }
 
 .issue-labels-popup {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius:3px;
   box-shadow: 0 0 10px rgba(0,0,0,.1);
   width:350px;
@@ -368,7 +368,7 @@ ul.issues-label-pallet li {
   width:100%;
   padding:8px 13px;
   color:#333;
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-bottom:none;
   border-radius:3px 3px 0 0;
   margin-bottom:-1px;
@@ -409,7 +409,7 @@ ul.issues-label-pallet li {
   text-align:right;
 }
 .issue-add-comment {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   margin-top:10px;
 }
@@ -597,12 +597,12 @@ ul.issues-label-pallet li {
   margin-bottom:10px;
 }
 .pulls-header {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   background:#fafafa;
   padding:10px;
 }
 .pulls-body {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-top:none;
   background:#fafafa;
   background:white;
@@ -633,7 +633,7 @@ ul.issues-label-pallet li {
   margin-bottom:10px;
 }
 .compare-open-pull-request {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   width:80%;
 }
@@ -657,7 +657,7 @@ ul.issues-label-pallet li {
 }
 
 .compare-nothing {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   background:#fafafa;
   padding:25px 0 30px 0;
@@ -668,7 +668,7 @@ ul.issues-label-pallet li {
 .text-gray { color:#767676 }
 
 input[type=text], input[type=password] {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   padding:6px 5px;
 }
@@ -718,7 +718,7 @@ input[type=text], input[type=password] {
 
 .project-tabs li.active {
   background:white;
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-top:3px #d26911 solid;
   border-bottom:white;
   border-radius:3px 3px 0 0;
@@ -741,7 +741,7 @@ input[type=text], input[type=password] {
   width:100%;
 }
 .admin-users th, .admin-users td {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   padding:5px;
 }
 .admin-users th {
@@ -835,7 +835,7 @@ input[type=text], input[type=password] {
 }
 
 .new-repository .last-child input[type=text] {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   padding:6px 5px;
   margin:5px 0;
@@ -851,7 +851,7 @@ input[type=text], input[type=password] {
 }
 
 .new-repository input[type=text] {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   padding:6px 5px;
   margin:5px 0;
@@ -2601,7 +2601,7 @@ button.close {
 .git-url-container input[type=text] {
   width:550px;
   padding:5px 0 5px 5px;
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius:0 3px 3px 0;
 }
 
@@ -2936,7 +2936,7 @@ button.close {
 
 .blame-body-container {
   overflow-x:scroll;
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius:0 0 3px 3px;
 }
 
@@ -2988,7 +2988,7 @@ button.close {
 }
 
 .user-form {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   padding:25px 0;
   width:300px;
@@ -3049,7 +3049,7 @@ button.close {
 }
 
 .search-result .left li {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-top:none;
   padding:7px 10px;
 }
@@ -3100,7 +3100,7 @@ button.close {
 }
 
 .project-settings .left li {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-top:none;
   padding:5px 10px;
 }
@@ -3119,7 +3119,7 @@ button.close {
 }
 
 .project-settings-main li {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-top:none;
   padding:10px 10px;
 }
@@ -3132,7 +3132,7 @@ button.close {
 }
 
 .project-settings-main input[type=text] {
-    border:1px solid #d8d8d8;
+    border:1px solid #e6e6e6;
     border-radius: 3px;
     padding:6px 5px;
     width:100%;
@@ -3144,7 +3144,7 @@ button.close {
 }
 
 .project-settings-main select {
-    border:1px solid #d8d8d8;
+    border:1px solid #e6e6e6;
     border-radius: 3px;
     padding:6px 5px;
     width:30%;
@@ -3152,7 +3152,7 @@ button.close {
 }
 
 .project-settings-danger li {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-top:none;
   padding:10px 10px;
 }
@@ -3166,7 +3166,7 @@ button.close {
 }
 
 #delete-confirm input {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   padding:6px 5px;
   margin:5px 0;
@@ -3182,7 +3182,7 @@ button.close {
 }
 
 .collaboration input[type=text] {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   padding:6px 5px;
   margin:5px 0;
@@ -3206,7 +3206,7 @@ button.close {
 }
 
 .user-settings .left li {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-top:none;
   padding:5px 10px;
 }
@@ -3227,7 +3227,7 @@ button.close {
 }
 
 .user-settings-container > div {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   padding:10px 10px;
   font-size:120%;
   margin-bottom:20px;
@@ -3251,7 +3251,7 @@ button.close {
 }
 
 .ssh-key-add input[type=text] {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   padding:6px 5px;
   margin:5px 0;
@@ -3259,7 +3259,7 @@ button.close {
 }
 
 .ssh-key-add textarea {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   padding:6px 5px;
   margin:5px 0;
@@ -3330,7 +3330,7 @@ button.close {
   margin-bottom:15px;
 }
 .branches > li {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-top:none;
   padding:8px 8px;
 }
@@ -3388,7 +3388,7 @@ button.close {
 }
 
 .branches-select li {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   float:left;
   border-left:none;
 }
@@ -3629,7 +3629,7 @@ button.close {
   margin-bottom:30px;
 }
 .commit-diff > :first-child {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius:3px 3px 0 0;
   padding:7px;
   background-color: #f7f7f7;
@@ -3649,7 +3649,7 @@ button.close {
 }
 
 .commit-diff-body {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-top:none;
   border-radius: 0 0 3px 3px;
   margin-bottom:30px;
@@ -3671,7 +3671,7 @@ button.close {
   padding:12px 10px;
   margin-bottom:5px;
   position:relative;
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   background-color: #fafafa;
 }
@@ -3681,7 +3681,7 @@ button.close {
 }
 
 .compare-header {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   overflow:hidden;
   border-radius: 3px;
   padding:10px;
@@ -3756,7 +3756,7 @@ button.close {
 }
 
 .network-mybranch select, .network-member-branch select {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   padding:6px 5px;
   width:30%;
@@ -3837,13 +3837,13 @@ button.close {
   width:45%;
 }
 .import-branch select {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   padding:6px 5px;
   width:30%;
 }
 .import-branch-from, .import-branch-to {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius:3px;
   padding:25px 15px;
 }
@@ -3870,14 +3870,14 @@ button.close {
   
 }
 .submodule > :first-child {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px 3px 0 0;
   padding:8px 5px;
   border-bottom:none;
   background-color: #f7f7f7;
 }
 .submodule > .last-child {
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-top:none;
   font-size:16px;
   padding:15px;
@@ -3897,7 +3897,7 @@ pre.command-line {
   background:white;
   text-align:center;
   font-size:20px;
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   padding:20px 0;
   color:#767676
@@ -3906,7 +3906,7 @@ pre.command-line {
 .not-yet-created {
   background:white;
   margin-bottom:30px;
-  border:1px solid #d8d8d8;
+  border:1px solid #e6e6e6;
   border-radius: 3px;
   color:#767676;
   padding:15px 10px;
