improve link color

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1283,12 +1283,12 @@ ul li {
 }
 
 a {
-  color: #0088cc;
+  color: #004CCA;
   text-decoration: none;
 }
 
 a:hover {
-  color: #005580;
+  color: #004CCA;
   text-decoration: underline;
 }
 
