--- a/public/css/common.css
+++ b/public/css/common.css
@@ -45,9 +45,10 @@
 }
 .commits-count {
   margin:0;
-  border-radius: 3px 3px 0 0;
   border: 1px solid #ddd;
-  border-bottom:none;
+  border-top:3px solid #6FBA2C;
+  margin-bottom:12px;
+  box-shadow: 0 1px 6px #d9d9d9;
 }
 
 .commits-count li {
@@ -67,15 +68,6 @@
 .commits-count li a:hover {
   color:#4078c0;
   text-decoration:none;
-}
-
-.commits-count-bottom {
-  border-radius:0 0 3px 3px;
-  border: 1px solid #ddd;
-  min-height:4px;
-  border-top:none;
-  margin-bottom:15px;
-  background:#6FBA2C;
 }
 
 .issue-labels {
