--- a/public/css/common.css
+++ b/public/css/common.css
@@ -2534,7 +2534,7 @@ button.close {
 
 .footer {
   text-align:center;
-  border-top:1px solid #e5e5e5;
+  border-top:3px solid #479A05;
   padding:15px 0;
   margin-top:30px;
   background:#5AAE08;
