--- a/public/css/common.css
+++ b/public/css/common.css
@@ -2664,8 +2664,8 @@ button.close {
   overflow:hidden;
   padding: 10px;
   line-height: 20px;
-  background-color: #e6f1f6;
-  border: 1px solid #c1dce9;
+  background-color: #e3f2ec;
+  border: 1px solid #c7d8d2;
   border-radius: 3px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -2707,14 +2707,14 @@ button.close {
 }
 
 .file-list li {
-  border: 1px solid #c1dce9;
+  border: 1px solid #c7d8d2;
   border-top:none;
   padding:7px;
   overflow:hidden;
 }
 
 .file-list li:last-child {
-  border-radius: 3px;
+  border-radius:0 0 3px 3px;
 }
 
 .file-list-name {
