--- a/public/css/common.css
+++ b/public/css/common.css
@@ -39,7 +39,7 @@ a {
 }
 
 a:hover {
-  color: #004CCA;
+  color: #33ce90;
   text-decoration: underline;
 }
 
@@ -52,6 +52,22 @@ a:hover {
   -o-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+.users {
+  margin-bottom:30px;
+}
+
+.users li {
+  border-bottom: 1px solid #e6e9e6;
+  overflow:hidden;
+  padding:10px 0;
+}
+.users li:first-child {
+  border-top: 1px solid #e6e9e6;
+}
+.users a:hover {
+  text-decoration:underline;
 }
 
 .tree-description {
@@ -896,9 +912,8 @@ body {
 
 .header {
   background:#5AAE08;
-  border-bottom:1px solid #e5e5e5;
   overflow:hidden;
-  border-bottom:3px solid #479A05;
+  border-bottom:2px solid #479A05;
 }
 
 .header-left {
@@ -2565,9 +2580,13 @@ button.close {
 }
 
 .repositories li {
-  border-top: 1px solid #e6e9e6;
+  border-bottom: 1px solid #e6e9e6;
   overflow:hidden;
   padding:10px 0;
+}
+
+.repositories li:first-child {
+  border-top: 1px solid #e6e9e6;
 }
 
 .repositories a:hover {
