improve user form design

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -3029,7 +3029,7 @@ button.close {
 }
 
 .user-form {
-  border:1px solid #e6e9e6;
+  border:1px solid #D0DDC7;
   border-radius: 3px;
   padding:25px 0;
   width:300px;
