--- a/public/css/common.css
+++ b/public/css/common.css
@@ -2560,19 +2560,15 @@ button.close {
 
 .footer {
   text-align:center;
-  border-top:2px solid #479A05;
+  border-top:1px solid #e2eae1;
   padding:8px 0 10px 0;
   margin-top:30px;
-  background:#5AAE08;
-  color:white;
-  font-size:16px;
+  background:#f7f9f7;
+  font-size:14px;
 }
 .footer a {
-  color:white;
-  text-decoration:underline;
 }
 .footer a:hover {
-  color:white;
 }
 
 .repositories {
